--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,11 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/test_map_0.test_map_0
-GameDefaultMap=/Game/Levels/test_map_0.test_map_0
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/MyGamemode.MyGamemode_C
+TransitionMap=/Game/Levels/TravelMap.TravelMap
+ServerDefaultMap=/Game/Levels/MainMenu.MainMenu
+GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -48,4 +51,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
