Revert "folder structure"
This reverts commit 2ad9d532157a73504dba1510f6d91e50e251ad8b.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/test_map_0.test_map_0
+GameDefaultMap=/Game/Levels/test_map_0.test_map_0
 GlobalDefaultGameMode=/Game/MyGamemode.MyGamemode_C
-TransitionMap=/Game/Levels/TravelMap.TravelMap
-ServerDefaultMap=/Game/Levels/MainMenu.MainMenu
-GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -51,3 +48,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
+
