--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,4 +54,5 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
-
+[OnlineSubsystem]
+DefaultPlatformService=Null
