--- a/thesis_0.uproject
+++ b/thesis_0.uproject
@@ -2,5 +2,12 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.18",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "thesis_0",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	]
 }
